add navbar with admin links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <!-- navbar below -->
+    <%= render '/layouts/navbar' %>
+    <!-- end navbar link -->
+
     <%= yield %>
   </body>
 </html>
