--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -22,8 +22,8 @@
         <td><%= product.price %></td>
         <td><%= product.quantity %></td>
         <td><%= product.description %></td>
-        <td><%= product.brand %></td>
-        <td><%= product.category %></td>
+        <td><%= product.brand.try(:name) %></td>
+        <td><%= product.category.try(:name) %></td>
         <td><%= link_to 'Show', admin_product_path(product) %></td>
         <td><%= link_to 'Edit', edit_admin_product_path(product) %></td>
         <td><%= link_to 'Destroy', admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></td>
