--- a/app/views/admin/brands/new.html.erb
+++ b/app/views/admin/brands/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Brand</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4
+                col-sm-6 col-sm-offset-3">
 
-<%= render 'form', brand: @brand %>
+        <h1>New Brand</h1>
 
-<%= link_to 'Back', admin_brands_path %>
+        <%= render 'form', brand: @brand %>
+
+        <%= link_to 'Back', admin_brands_path %>
+    </div>
+  </div>
+</div>
