--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,27 +1,38 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Categories</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4
+                col-sm-6 col-sm-offset-3">
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <h1>Categories</h1>
 
-  <tbody>
-    <% @categories.each do |category| %>
-      <tr>
-        <td><%= category.name %></td>
-        <td><%= link_to 'Show', admin_category_path(category) %></td>
-        <td><%= link_to 'Edit', edit_admin_category_path(category) %></td>
-        <td><%= link_to 'Destroy', admin_category_path(category), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th colspan="3">Options</th>
+          </tr>
+        </thead>
 
-<br>
+        <tbody>
+          <% @categories.each do |category| %>
+            <tr>
+              <td><%= category.name %></td>
+              <td><%= link_to '<i class="fa fa-eye" aria-hidden="true"></i>
+              '.html_safe, admin_category_path(category), class: 'btn btn-default' %></td>
+              <td><%= link_to '<i class="fa fa-pencil" aria-hidden="true"></i>
+              '.html_safe, edit_admin_category_path(category), class: 'btn btn-default' %></td>
+              <td><%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>
+              '.html_safe, admin_category_path(category), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default' %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
 
-<%= link_to 'New Category', new_admin_category_path %>
+      <br>
+      <%= link_to 'New Category', new_admin_category_path, class: 'btn btn-default' %>
+
+    </div>
+  </div>
+</div>
