--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Category</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4
+                col-sm-6 col-sm-offset-3">
 
-<%= render 'form', category: @category %>
+        <h1>New Category</h1>
 
-<%= link_to 'Back', admin_categories_path %>
+        <%= render 'form', category: @category %>
+
+        <%= link_to 'Back', admin_categories_path %>
+      </div>
+    </div>
+  </div>
