--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -2,36 +2,43 @@
 
 <h1>Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Quantity</th>
-      <th>Description</th>
-      <th>Brand</th>
-      <th>Category</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
+<div class="container">
+  <table class ="table table-hover">
+    <thead>
       <tr>
-        <td><%= product.name %></td>
-        <td><%= product.price %></td>
-        <td><%= product.quantity %></td>
-        <td><%= product.description %></td>
-        <td><%= product.brand.try(:name) %></td>
-        <td><%= product.category.try(:name) %></td>
-        <td><%= link_to 'Show', admin_product_path(product) %></td>
-        <td><%= link_to 'Edit', edit_admin_product_path(product) %></td>
-        <td><%= link_to 'Destroy', admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Image</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Description</th>
+        <th>Brand</th>
+        <th>Category</th>
+        <th colspan="3">Options</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @products.each do |product| %>
+        <tr>
+          <td><%= image_tag(product.avatar.url(:thumb)) %></td>
+          <td><%= product.name %></td>
+          <td><%= number_to_currency(product.price) %></td>
+          <td><%= product.quantity %></td>
+          <td><%= product.description %></td>
+          <td><%= product.brand.try(:name) %></td>
+          <td><%= product.category.try(:name) %></td>
+          <td><%= link_to '<i class="fa fa-eye" aria-hidden="true"></i>
+          '.html_safe, admin_product_path(product), class: 'btn btn-default' %></td>
+          <td><%= link_to '<i class="fa fa-pencil" aria-hidden="true"></i>
+          '.html_safe, edit_admin_product_path(product), class: 'btn btn-default' %></td>
+          <td><%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>
+          '.html_safe, admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default' %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <br>
 
-<%= link_to 'New Product', new_admin_product_path %>
+<%= link_to 'New Product', new_admin_product_path, class: 'btn btn-default' %>
