--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,5 +1,14 @@
-<h1>New Product</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4
+                col-sm-6 col-sm-offset-3">
 
-<%= render 'form', product: @product %>
+        <h1>New Product</h1>
 
-<%= link_to 'Back', admin_products_path %>
+        <%= render 'form', product: @product %>
+
+        <%= link_to 'Back', admin_products_path %>
+
+      </div>
+    </div>
+  </div>
