--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,24 +11,9 @@
       <a class="navbar-brand" href="#">Stuff Store</a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-       <!-- admin dropdown -->
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to 'Brands', admin_brands_path %></li>
-            <li><%= link_to 'Categories', admin_categories_path %></li>
-            <li><%= link_to 'Products', admin_products_path %></li>
-          </ul>
-        </li>
-      </ul>
-      <!-- end admin dropdown -->
 
-      <ul class="nav navbar-nav navbar-right">
+      <%= render 'layouts/navbar_links' %>
 
-      </ul>
-    </div><!-- /.navbar-collapse -->
+
   </div><!-- /.container-fluid -->
 </nav>
