--- a/app/views/layouts/_navbar_links.html.erb
+++ b/app/views/layouts/_navbar_links.html.erb
@@ -13,8 +13,10 @@
         </li>
       </ul>
 
-      <!-- login stuff  -->
+
       <ul class="nav navbar-nav navbar-right">
+      <li>shopping cart link</li>
+       <!-- login stuff  -->
         <% if user_signed_in? %>
             <li><%= link_to 'account', edit_user_registration_path %></li>
             <li><%= link_to 'logout', destroy_user_session_path, method: :delete %></li>
